# src/app/swagger.yaml
@@ -90,6 +90,58 @@ paths:
                         description: Verification result if an OTP was provided
                         example: true
         400:
-          description: Missing OTP in the verification request
+          description: Invalid OTP provided
+        404:
+          description: OTP not created
+  /hotp:
+    get:
+      tags:
+        - HOTP
+      summary: Generate and verify a HMAC-based One-time Password (HOTP).
+      parameters:
+        - name: otp
+          in: query
+          required: false
+          description: The OTP to verify (optional).
+          schema:
+            type: string
+        - name: initial_count
+          in: query
+          required: false
+          description: HOTP initial creation counter (optional).
+          schema:
+            type: integer
+      responses:
+        200:
+          description: HOTP generated or verified successfully
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - type: object
+                    properties:
+                      uri:
+                        type: string
+                        description: Provisioning HOTP uri to be used in a authenticator app
+                        example: "otpauth://hotp/Secure%20App:alice%40google.com?secret=JBSWY3DPEHPK3PXP&issuer=Secure%20App&counter=0"
+                  - type: object
+                    properties:
+                      status:
+                        type: boolean
+                        description: Verification result if an OTP was provided
+                        example: true
+        400:
+          description: Invalid OTP provided
+        404:
+          description: HOTP not created
         409:
-          description: OTP not created or not available for verification
+          description: HOTP already created
+    delete:
+      tags:
+        - HOTP
+      summary: Reset the HMAC-based One-time Password (HOTP).
+      responses:
+        204:
+          description: HOTP reset successfully
+        404:
+          description: HOTP not created
